force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <description>Used to track warranties on assets.</description>
    <label>Warranty</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Warranty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>