force-app/main/default/objects/Warranty__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The asset this warranty is associated with.</description>
    <inlineHelpText>The asset this warranty is associated with</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>