force-app/main/default/objects/Warranty__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used to describe the asset warranty.</description>
    <inlineHelpText>Used to describe the asset warranty.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>