force-app/main/default/objects/Warranty__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date in which the warranty concludes.</description>
    <inlineHelpText>Date in which the warranty concludes.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>