force-app/main/default/objects/Warranty__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date that the warranty began.</description>
    <inlineHelpText>Date that the warranty began.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>