force-app/main/default/objects/Warranty__c/fields/Warranty_Provider__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account that provides this warranty.</description>
    <inlineHelpText>The account that provides this warranty.</inlineHelpText>
    <label>Warranty Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be a warranty provider.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Warranty Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranties</relationshipLabel>
    <relationshipName>Warranties</relationshipName>
    <type>Lookup</type>
</CustomField>