force-app/main/default/objects/Warranty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Warranty_Provider__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>